--- a/chattingtest/html/webChat.html
+++ b/chattingtest/html/webChat.html
@@ -24,11 +24,13 @@
 <div></div>
     <div class="container">
         <div id="items">
-
-
+            대화기록
+        <hr>
         </div>
         <form>
-        <div><input text ="text" id = "nickname" placeholder="닉네임을 입력하세요">
+            <hr>
+        <div>
+            <input text ="text" id = "nickname" placeholder="닉네임을 입력하세요">
             <input text ="text" id = "chat" placeholder="채팅을 입력하세요">
             <button type = "button" id="btn-chat" class="btn btn-primary">전송</button></div>
     </div>
